css/main.css
/* ... */
/* autoArrows CSS */
span.sf-arrow { 
  width: 7px;
  height: 7px;
  position: absolute;
  top: 20px;
  right: 5px;
  display: block;
  background: url(http://germg.github.io/images/arrows-white.png) no-repeat 0 0;
  overflow: hidden; /* making sure IE6 doesn't overflow and expand the box */
  font-size: 1px;
}

ul ul span.sf-arrow { 
  right: 10;
  top: 20px;
  background-position: 0 100%;
}

/* Theming the menu */
ul#nav { 
  float: right;
}

ul#nav ul { 
  background: url(http://germg.github.io/images/menu_hover.png) repeat;
  margin-top: 5px;
  padding-bottom: 15px;
}

ul#nav li a { 
  padding:7px 20px 6px 20px;
  font: 170% arial,verdana,tahoma;
  text-shadow: 1px 1px #000;
  text-decoration:none;
  color:#FFF;
  margin-right: 2px;
}

ul#nav li a:hover,ul#nav li a:focus { 
  color:#09D4FF;
}

/*****************************************************************************/
/*
/* Posts
/*
/*****************************************************************************/

.post
{
  padding: 0 1em 0 1em;
  margin-bottom: 1em;
}

/* standard */
.post pre {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .4em;
}

.post ul, .post ol {
  margin-left: 1.35em;
}

.post code {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .2em;
}

.post pre code {
  border: none;
}

/* terminal */
.post pre.terminal {
  border: 1px solid #000;
  background-color: #333;
  color: #FFF;
}

.post pre.terminal code {
  background-color: #333;
}

.post h1
{
  font-size: 15px;
  font-style: italic;
  padding-left: 1em;
}

.postTitle
{
  padding: 0 1em 0 1em;
}

.postPageTitle
{
  font-size: 170%;
}

.paddingBottom
{
  padding-bottom: 1.5em;
}

.shadow 
{
  border-radius: 5px;
  box-shadow: 0px 0px 15px #999;
  /* IE 8 */
  -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#999999')";     
  /* IE 5.5 - 7 */    
  filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#999999'); 
}

.headerIcons
{
  float: right;
  padding: 0px 2px 5px 0px;
  width: 20px;
  height: 20px;
}

.backgroundRadius
{
  padding: 5px 5px 5px 5px;
  background-color: #EFF5FB;
  border-radius: 5px;
  margin-bottom: 1em;
}

.imageAbout
{
  float: right;
  margin-left: 1em;
  width: auto;
  height: 120px;
  border-radius: 2px;
}

.integrations
{

  margin-left: 1em;
  margin-right: 1em;
}

.disqusIntegration
{
  margin-top: 1em;
  margin-bottom: 1em;
  padding: 7px 7px 7px 7px;
}

.facebookIntegration
{
  padding-top: 1em;
  border-top: 4px solid #D8D8D8;
}

/* iPhone (portrait) */
@media (max-width: 767px) {
  
}

/* iPhone (landscape) */
@media only screen and (min-width: 320px) and (max-width: 767px) {

  .content { 
    text-align: left;
    width: 100%;
    margin-bottom:15px;
    float: left;
    font-size: 100%;
    padding-top: 14px;
  }

  .logo { 
    width: 100%;
    height: 200px;
    background: transparent url(http://germg.github.io/images/logo.png) no-repeat right;
    color: #888;
    padding: 0;
  }

  .posts span {
    color: #424242;
    font-family: Arial, "Courier New", monospace;
    font-size: 100%;
    float: right;
  }

  .logo .logo_text { 
    font-size: 70%;
    padding-left: 2%;
  }
  
  .logo_text h2
  {
    color: #000;
    font-weight: bold;
  }

  .sidebar
  {
    display: none;
  }

.youtube{
    width: 100%;
    height: 150px;
  }
}

